--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-streamlit
+streamlit==1.31.0
+python-docx==1.1.0
+PyPDF2==3.0.1
+sentence-transformers==2.3.1
+pinecone-client==3.0.3
+openai>=1.50.0
+transformers==4.37.2
+torch==2.2.0
+pandas==2.2.0
+requests==2.31.0
