--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,96 @@
-streamlit==1.31.0
-python-docx==1.1.0
-PyPDF2==3.0.1
-sentence-transformers==2.3.1
-pinecone-client==3.0.3
-openai>=1.50.0
-transformers==4.37.2
-torch==2.2.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.11.0
+attrs==25.4.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+distro==1.9.0
+filelock==3.20.0
+fsspec==2025.10.0
+gitdb==4.0.12
+GitPython==3.1.45
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.36.0
+idna==3.11
+importlib_metadata==7.2.1
+Jinja2==3.1.6
+jiter==0.12.0
+joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+lxml==6.0.2
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+mpmath==1.3.0
+narwhals==2.12.0
+networkx==3.5
+nltk==3.9.2
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.9.86
+nvidia-nvtx-cu12==12.1.105
+openai==2.8.1
+packaging==23.2
 pandas==2.2.0
+pillow==10.4.0
+pinecone-client==3.0.3
+plotly==6.5.0
+protobuf==4.25.8
+pyarrow==22.0.0
+pydantic==2.12.4
+pydantic_core==2.41.5
+pydeck==0.9.1
+Pygments==2.19.2
+PyPDF2==3.0.1
+python-dateutil==2.9.0.post0
+python-docx==1.1.0
+pytz==2025.2
+PyYAML==6.0.3
+referencing==0.37.0
+regex==2025.11.3
 requests==2.31.0
+rich==13.9.4
+rpds-py==0.29.0
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.3
+sentence-transformers==2.3.1
+sentencepiece==0.2.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+streamlit==1.31.0
+sympy==1.14.0
+tenacity==8.5.0
+threadpoolctl==3.6.0
+tokenizers==0.15.2
+toml==0.10.2
+torch==2.2.0
+tornado==6.5.2
+tqdm==4.67.1
+transformers==4.37.2
+triton==2.2.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.5.0
+validators==0.35.0
+watchdog==6.0.0
+zipp==3.23.0
